@@ -128,7 +128,7 @@ class ExamRegistrationIntegrationTest extends AbstractSpringIntegrationLocalCILo
         List<String> registrationNumbers = Arrays.asList("1111111", "1111112", "1111113");
         List<User> students = userUtilService.setRegistrationNumberOfStudents(registrationNumbers, TEST_PREFIX);
 
-        User student1 = students.get(0);
+        User student1 = students.getFirst();
         User student2 = students.get(1);
         User student3 = students.get(2);
 
